--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,10 @@
+2012-06-16  Aurelien Aptel  <aurelien.aptel@gmail.com>
+
+	* cus-face.el (custom-face-attributes): Add wave-style underline
+	attribute.
+	* faces.el (set-face-attribute): Update docstring to describe
+	wave-style underline attribute.
+
 2012-06-16  Chong Yidong  <cyd@gnu.org>
 
 	* term/xterm.el (terminal-init-xterm): Discard input before
