--- a/doc/lispref/display.texi
+++ b/doc/lispref/display.texi
@@ -2113,6 +2113,7 @@ variable-brightness text, any weight greater than normal is displayed
 as extra bright, and any weight less than normal is displayed as
 half-bright.
 
+@cindex italic text
 @item :slant
 Font slant---one of the symbols @code{italic}, @code{oblique},
 @code{normal}, @code{reverse-italic}, or @code{reverse-oblique}.  On
@@ -2129,10 +2130,10 @@ stipple patterns.
 Background color, a string.  The value can be a system-defined color
 name, or a hexadecimal color specification.  @xref{Color Names}.
 
+@cindex underlined text
 @item :underline
 Whether or not characters should be underlined, and in what
-color. Here are the possible values of the @code{:underline}
-attribute, and what they mean:
+way.  The possible values of the @code{:underline} attribute are:
 
 @table @asis
 @item @code{nil}
@@ -2142,28 +2143,29 @@ Don't underline.
 Underline with the foreground color of the face.
 
 @item @var{color}
-Underline in color @var{color}.
+Underline in color @var{color}; which should be either a string
+specifying a color, or the symbol @code{foreground-color}, meaning the
+foreground color of the face.
 
 @item @code{(:color @var{color} :style @var{style})}
-If @var{color} is a string, underline in it.
-If @var{color} is @code{foreground-color}, underline with the
-foreground color of the face.
-
-If @var{style} is @code{wave} underline with a wave.
-If @var{style} is @code{line} underline with a line. 
-
-If the attribute @code{:color} is omited, underline with the
-foreground color of the face.
-If the attribute @code{:style} is omited, underline with a line.
+@var{color} is as described above.  Omitting the attribute
+@code{:color} means to use the foreground color of the face.
+@var{style} should be a symbol @code{line} or @code{wave}, meaning to
+use a straight or wavy line.  Omitting the attribute @code{:style}
+means to use a straight line.
 @end table
 
+@cindex overlined text
 @item :overline
 Whether or not characters should be overlined, and in what color.
-The value is used like that of @code{:underline}.
+If the value is @code{t}, overlining uses the foreground color of the
+face.  If the value is a string, overlining uses that color.  The
+value @code{nil} means do not overline.
 
+@cindex strike-through text
 @item :strike-through
 Whether or not characters should be strike-through, and in what
-color.  The value is used like that of @code{:underline}.
+color.  The value is used like that of @code{:overline}.
 
 @item :box
 Whether or not a box should be drawn around characters, its color, the
