--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-17  Chong Yidong  <cyd@gnu.org>
+
+	* term.el (term-emulate-terminal): If term-check-size is called,
+	move point to the process mark without resetting point (Bug#4635).
+
 2012-06-13  Glenn Morris  <rgm@gnu.org>
 
 	* international/mule-cmds.el (mule-menu-keymap)
