--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-17  Martin Rudalics  <rudalics@gmx.at>
+
+	* window.el (special-display-p): Signal an error if BUFFER-NAME
+	is not a string (Bug#11713).
+
 2012-06-17  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* progmodes/python.el (python-info-beginning-of-backslash):
