--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,10 +1,6 @@
-2012-06-11  Chong Yidong  <cyd@gnu.org>
+2012-06-17  Chong Yidong  <cyd@gnu.org>
 
-	* emacs.texi: Remove urlcolor setting.
-
-2012-06-10  Chong Yidong  <cyd@gnu.org>
-
-	* emacs.texi: Update ISBN and edition number.
+	* emacs.texi: Remove urlcolor setting.  Update ISBN and edition number.
 
 	* anti.texi:
 	* building.texi:
