--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-18  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/pcase.el (pcase--expand): Warn for unused pattern.
+	(pcase--u1, pcase--q1): Don't use apply-partially.
+
 2012-06-18  Glenn Morris  <rgm@gnu.org>
 
 	* progmodes/python.el (python-proc, python-buffer)
