Port byte-code-meter to modern targets.
* bytecode.c (METER_CODE) [BYTE_CODE_METER]: Don't assume
!CHECK_LISP_OBJECT_TYPE && !USE_LSB_TAG.  Problem with
CHECK_LISP_OBJECT_TYPE reported by Dmitry Andropov in
<http://lists.gnu.org/archive/html/emacs-devel/2012-06/msg00282.html>.
(METER_1, METER_2): Simplify.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,12 @@
+2012-06-18  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Port byte-code-meter to modern targets.
+	* bytecode.c (METER_CODE) [BYTE_CODE_METER]: Don't assume
+	!CHECK_LISP_OBJECT_TYPE && !USE_LSB_TAG.  Problem with
+	CHECK_LISP_OBJECT_TYPE reported by Dmitry Andropov in
+	<http://lists.gnu.org/archive/html/emacs-devel/2012-06/msg00282.html>.
+	(METER_1, METER_2): Simplify.
+
 2012-06-18  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* data.c (Fdefalias): Return `symbol' (bug#11686).
