--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-19  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in: Rename infodir to buildinfodir throughout.  (Bug#11737)
+
 2012-06-11  Chong Yidong  <cyd@gnu.org>
 
 	* emacs.texi: Remove urlcolor setting.
