--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-20  Chong Yidong  <cyd@gnu.org>
+
+	* term.el (term-send-raw-meta): Make C-M-<char> keys work (Bug#8172).
+
 2012-06-20  David Röthlisberger  <david@rothlis.net>  (tiny change)
 
 	* ido.el (ido-switch-buffer, ido-find-file): Fix up doc of C-j
