--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,34 @@
 2012-09-23  Stephen Berman  <stephen.berman@gmx.net>
 
+	* calendar/todos.el: Further comment revision.
+	(todos-sorted-column): Change default value, also taking tty into
+	account.
+	(todos-reset-done-separator): Fix faulty variable binding.
+	(todos-reset-and-enable-done-separator): Save match data; comment
+	out code that causes problems for Edebug.
+	(todos-item-start): Handle empty line between todo and done items
+	when done items are hidden.
+	(todos-read-date): Use a leap year for `*' to allow
+	calendar-last-day-of-month to return Feb. 29.
+	(todos-archive-mode, todos-edit-mode, todos-categories-mode)
+	(todos-filtered-items-mode): Delete faulty parentheses.
+	(todos-quit): Save Todos and archive files unconditionally.
+	(todos-forward-item): Accept only positive prefix argument.
+	(todos-backward-item): Accept only positive prefix argument; don't
+	move point to beginning of buffer if it is on the first item.
+	(todos-hide-show-date-time): Remove obsolete interactive spec.
+	(todos-move-category): Improve prompt string; ensure file moved to
+	is different from file moved from.
+	(todos-merge-categories): Remove.
+	(todos-set-category-priority): New command.
+	(todos-raise-category-priority, todos-lower-category-priority):
+	Use it to define these commands.
+	(todos-set-item-priority): Rewrite and generalize.
+	(todos-raise-item-priority, todos-lower-item-priority): Use it to
+	define these commands.
+
+2012-09-23  Stephen Berman  <stephen.berman@gmx.net>
+
 	* calendar/todos.el (todos-reset-done-separator)
 	(todos-reset-and-enable-done-separator): New functions.
 	(todos-reset-done-separator-string): Rewrite using
