--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-06-22  Eli Zaretskii  <eliz@gnu.org>
+
+	* alloc.c (NSTATICS): Enlarge to 0x650.  Otherwise, Emacs compiled
+	with -DENABLE_CHECKING -DXASSERTS -DGLYPH_DEBUG=1 -DBYTE_CODE_METER
+	aborts in staticpro during startup.  (Without -DBYTE_CODE_METER,
+	staticidx goes up to 1597 out of 1600 = 0x640.)
+
 2012-06-20  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* fileio.c (Fdefault_file_modes): Block input while fiddling with umask.
