--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-22  Bastien Guerry  <bzg@gnu.org>
+
+	* files.el (toggle-read-only): Display a message telling whether
+	the buffer is read-only or not (bug#11726).
+
 2012-06-22  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/gv.el: New file.
